替换所有名字

--- a/查看成绩.html
+++ b/查看成绩.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/top.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">
     <link href="css/saishi.css" rel="stylesheet">
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
