--- a/赛事安排.html
+++ b/赛事安排.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/top.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">
     <link href="css/saishi.css" rel="stylesheet">
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -55,18 +55,6 @@
                 </div>
             </div>
         </div>
-        <div class="row chengji-head-wrap">
-            <div class="col-xs-12 col-sm-6">
-                <h3 class="chengji-title">2016年度全国攀岩运动员积分排名</h3>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <div class="chengji-btn">
-                    <a href="javascript:;">难度</a>
-                    <a href="javascript:;">攀石</a>
-                    <a href="javascript:;">速度</a>
-                </div>
-            </div>
-        </div>
         <div class="saishi-list-wrap">
             <ul class="saishi-list">
                 <li>
@@ -91,7 +79,10 @@
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
+                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
                                 </div>
                             </div>
 
@@ -120,7 +111,10 @@
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
+                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
                                 </div>
                             </div>
 
@@ -149,7 +143,10 @@
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
+                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
                                 </div>
                             </div>
 
@@ -178,7 +175,10 @@
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
+                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
                                 </div>
                             </div>
 
@@ -207,7 +207,10 @@
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
+                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
                                 </div>
                             </div>
 
@@ -236,7 +239,74 @@
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
+                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row siashi-list-item">
+                        <div class="col-xs-12 col-sm-1 thumbnail-box">
+                            <div class="thumbnail">
+                                <a href="#" class="thumbnail-item">
+                                    <i class="black-bg"></i>
+                                    <img src="img/pic1.jpg" alt="" class="thumbnail-img">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-9">
+                            <div class="list-detail-box">
+                                <div class="list-detail">
+                                    <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
+                                    <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
+                                    <p class="time">2016.09.15~2016.0.16</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-2 pull-right">
+                            <div class="list-btn-box">
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row siashi-list-item">
+                        <div class="col-xs-12 col-sm-1 thumbnail-box">
+                            <div class="thumbnail">
+                                <a href="#" class="thumbnail-item">
+                                    <i class="black-bg"></i>
+                                    <img src="img/pic1.jpg" alt="" class="thumbnail-img">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-9">
+                            <div class="list-detail-box">
+                                <div class="list-detail">
+                                    <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
+                                    <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
+                                    <p class="time">2016.09.15~2016.0.16</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-2 pull-right">
+                            <div class="list-btn-box">
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
                                 </div>
                             </div>
 
