--- a/赛事报名.html
+++ b/赛事报名.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/top.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">
     <link href="css/saishi.css" rel="stylesheet">
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -64,6 +64,10 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
+                                    <div class="bobao-ing">
+                                        <span></span>
+                                        <p>正在报名</p>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -73,16 +77,29 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
+                                    <div class="list-zc clearfix">
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>竞赛规程</span>
+                                        </a>
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>参赛须知</span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                    <a href="javascript:;" class="list-btn active">报名</a>
                                 </div>
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
+                                    <a href="javascript:;" class="list-btn">取消报名</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">查看名单</a>
                                 </div>
                             </div>
 
@@ -96,6 +113,10 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
+                                    <div class="bobao-ing">
+                                        <span></span>
+                                        <p>正在报名</p>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -105,16 +126,29 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
+                                    <div class="list-zc clearfix">
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>竞赛规程</span>
+                                        </a>
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>参赛须知</span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                    <a href="javascript:;" class="list-btn active">报名</a>
                                 </div>
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
+                                    <a href="javascript:;" class="list-btn">取消报名</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">查看名单</a>
                                 </div>
                             </div>
 
@@ -128,6 +162,10 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
+                                    <div class="bobao-ing">
+                                        <span></span>
+                                        <p>正在报名</p>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -137,16 +175,29 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
+                                    <div class="list-zc clearfix">
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>竞赛规程</span>
+                                        </a>
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>参赛须知</span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                    <a href="javascript:;" class="list-btn active">报名</a>
                                 </div>
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
+                                    <a href="javascript:;" class="list-btn">取消报名</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">查看名单</a>
                                 </div>
                             </div>
 
@@ -160,6 +211,10 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
+                                    <div class="bobao-ing">
+                                        <span></span>
+                                        <p>正在报名</p>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -169,16 +224,29 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
+                                    <div class="list-zc clearfix">
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>竞赛规程</span>
+                                        </a>
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>参赛须知</span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                    <a href="javascript:;" class="list-btn active">报名</a>
                                 </div>
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
+                                    <a href="javascript:;" class="list-btn">取消报名</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">查看名单</a>
                                 </div>
                             </div>
 
@@ -192,6 +260,10 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
+                                    <div class="bobao-ing">
+                                        <span></span>
+                                        <p>正在报名</p>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -201,16 +273,29 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
+                                    <div class="list-zc clearfix">
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>竞赛规程</span>
+                                        </a>
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>参赛须知</span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                    <a href="javascript:;" class="list-btn active">报名</a>
                                 </div>
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
+                                    <a href="javascript:;" class="list-btn">取消报名</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">查看名单</a>
                                 </div>
                             </div>
 
@@ -224,6 +309,10 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
+                                    <div class="bobao-ing">
+                                        <span></span>
+                                        <p>正在报名</p>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -233,16 +322,29 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
+                                    <div class="list-zc clearfix">
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>竞赛规程</span>
+                                        </a>
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>参赛须知</span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                    <a href="javascript:;" class="list-btn active">报名</a>
                                 </div>
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
+                                    <a href="javascript:;" class="list-btn">取消报名</a>
+                                </div>
+                                <div class="list-btn-item">
+                                    <a href="javascript:;" class="list-btn">查看名单</a>
                                 </div>
                             </div>
 
@@ -256,6 +358,10 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
+                                    <div class="bobao-ing">
+                                        <span></span>
+                                        <p>正在报名</p>
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -265,48 +371,29 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
+                                    <div class="list-zc clearfix">
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>竞赛规程</span>
+                                        </a>
+                                        <a href="javascript:;" class="list-zc-item">
+                                            <i></i>
+                                            <span>参赛须知</span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                    <a href="javascript:;" class="list-btn active">报名</a>
                                 </div>
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="row siashi-list-item">
-                        <div class="col-xs-12 col-sm-1 thumbnail-box">
-                            <div class="thumbnail">
-                                <a href="#" class="thumbnail-item">
-                                    <i class="black-bg"></i>
-                                    <img src="img/pic1.jpg" alt="" class="thumbnail-img">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-9">
-                            <div class="list-detail-box">
-                                <div class="list-detail">
-                                    <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
-                                    <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
-                                    <p class="time">2016.09.15~2016.0.16</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-2 pull-right">
-                            <div class="list-btn-box">
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">酷赛直播</a>
+                                    <a href="javascript:;" class="list-btn">取消报名</a>
                                 </div>
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">赛事回顾</a>
+                                    <a href="javascript:;" class="list-btn">查看名单</a>
                                 </div>
                             </div>
 
