--- a/赛事成绩.html
+++ b/赛事成绩.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/top.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">
     <link href="css/saishi.css" rel="stylesheet">
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -55,6 +55,18 @@
                 </div>
             </div>
         </div>
+        <div class="row chengji-head-wrap">
+            <div class="col-xs-12 col-sm-6">
+                <h3 class="chengji-title">2016年度全国攀岩运动员积分排名</h3>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <div class="chengji-btn">
+                    <a href="javascript:;">难度</a>
+                    <a href="javascript:;">攀石</a>
+                    <a href="javascript:;">速度</a>
+                </div>
+            </div>
+        </div>
         <div class="saishi-list-wrap">
             <ul class="saishi-list">
                 <li>
@@ -64,10 +76,6 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
-                                    <div class="bobao-ing">
-                                        <span></span>
-                                        <p>正在报名</p>
-                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -77,29 +85,13 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
-                                    <div class="list-zc clearfix">
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>竞赛规程</span>
-                                        </a>
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>参赛须知</span>
-                                        </a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">取消报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">查看名单</a>
+                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
                                 </div>
                             </div>
 
@@ -113,10 +105,6 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
-                                    <div class="bobao-ing">
-                                        <span></span>
-                                        <p>正在报名</p>
-                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -126,29 +114,13 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
-                                    <div class="list-zc clearfix">
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>竞赛规程</span>
-                                        </a>
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>参赛须知</span>
-                                        </a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">取消报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">查看名单</a>
+                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
                                 </div>
                             </div>
 
@@ -162,10 +134,6 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
-                                    <div class="bobao-ing">
-                                        <span></span>
-                                        <p>正在报名</p>
-                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -175,29 +143,13 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
-                                    <div class="list-zc clearfix">
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>竞赛规程</span>
-                                        </a>
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>参赛须知</span>
-                                        </a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">取消报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">查看名单</a>
+                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
                                 </div>
                             </div>
 
@@ -211,10 +163,6 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
-                                    <div class="bobao-ing">
-                                        <span></span>
-                                        <p>正在报名</p>
-                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -224,29 +172,13 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
-                                    <div class="list-zc clearfix">
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>竞赛规程</span>
-                                        </a>
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>参赛须知</span>
-                                        </a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">取消报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">查看名单</a>
+                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
                                 </div>
                             </div>
 
@@ -260,10 +192,6 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
-                                    <div class="bobao-ing">
-                                        <span></span>
-                                        <p>正在报名</p>
-                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -273,29 +201,13 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
-                                    <div class="list-zc clearfix">
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>竞赛规程</span>
-                                        </a>
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>参赛须知</span>
-                                        </a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">取消报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">查看名单</a>
+                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
                                 </div>
                             </div>
 
@@ -309,10 +221,6 @@
                                 <a href="#" class="thumbnail-item">
                                     <i class="black-bg"></i>
                                     <img src="img/pic1.jpg" alt="" class="thumbnail-img">
-                                    <div class="bobao-ing">
-                                        <span></span>
-                                        <p>正在报名</p>
-                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -322,78 +230,13 @@
                                     <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
                                     <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
                                     <p class="time">2016.09.15~2016.0.16</p>
-                                    <div class="list-zc clearfix">
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>竞赛规程</span>
-                                        </a>
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>参赛须知</span>
-                                        </a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-2 pull-right">
                             <div class="list-btn-box">
                                 <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">取消报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">查看名单</a>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="row siashi-list-item">
-                        <div class="col-xs-12 col-sm-1 thumbnail-box">
-                            <div class="thumbnail">
-                                <a href="#" class="thumbnail-item">
-                                    <i class="black-bg"></i>
-                                    <img src="img/pic1.jpg" alt="" class="thumbnail-img">
-                                    <div class="bobao-ing">
-                                        <span></span>
-                                        <p>正在报名</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-9">
-                            <div class="list-detail-box">
-                                <div class="list-detail">
-                                    <h3 class="title">2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）</h3>
-                                    <h4 class="translate">CMA Climbing Competition Series - WuLanChaBu.NeiMengGu（B,S）</h4>
-                                    <p class="time">2016.09.15~2016.0.16</p>
-                                    <div class="list-zc clearfix">
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>竞赛规程</span>
-                                        </a>
-                                        <a href="javascript:;" class="list-zc-item">
-                                            <i></i>
-                                            <span>参赛须知</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-2 pull-right">
-                            <div class="list-btn-box">
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn active">报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">取消报名</a>
-                                </div>
-                                <div class="list-btn-item">
-                                    <a href="javascript:;" class="list-btn">查看名单</a>
+                                    <a href="javascript:;" class="list-btn active">查看成绩</a>
                                 </div>
                             </div>
 
