所有的页面都放到了一个目录下了

--- a/首页.html
+++ b/首页.html
@@ -75,7 +75,8 @@
                 <div class="pull-right col-xs-12 col-sm-12 col-md-4 first-box">
                     <!-- 视频-->
                     <div class="video-box">
-                        <img src="img/video.jpg" alt="" class="video-item">
+                        <!--<img src="img/video.jpg" alt="" class="video-item">-->
+                        <video src="video/trail.mp4" class="video-item"></video>
                         <div class="video-sec">
                             <a href="javascript:;" class="video-text clearfix">
                                 <i class="video-icon"></i>
