--- a/关于我们.html
+++ b/关于我们.html
@@ -4,10 +4,12 @@
     <title>攀岩在线</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/top.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">
+    <link href="css/saishi2.css" rel="stylesheet">
     <link href="css/saishi.css" rel="stylesheet">
+
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -46,15 +48,14 @@
 </div>
 
 <!--主要内容区域-->
-<div class="indexMain-wrap about">
+<div class="content-bg content-bg about">
     <div class="container container-white">
         <div class="row">
-            <div class="col-sm-12 con-calendar">
-                <div class="con-reg-title clearfix">
-                    <i class="con-reg-tip fl"></i>
-                    <span class="con-reg-text fl">关于我们</span>
-                    <i class="con-reg-line fl">/</i>
-                    <span class="con-reg-sub fl">ABOUT US</span>
+            <div class="col-sm-12">
+                <div class="ssbm-title">
+                    <div class="line"></div>
+                    <h3 class="head">关于我们</h3>
+                    <P class="english"><span>/</span>ABOUT US</P>
                 </div>
             </div>
         </div>
