--- a/后台页面/俱乐部资料.html
+++ b/后台页面/俱乐部资料.html
@@ -4,11 +4,12 @@
     <title>攀岩在线--俱乐部冠名</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/top.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
-    <script src="js/jquery-3.1.0.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/global.css" rel="stylesheet">
+    <link href="../css/houtai.css" rel="stylesheet">
+
+    <script src="../js/jquery-3.1.0.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -17,7 +18,7 @@
         <nav class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle g-fun" data-toggle="collapse" data-target=".navbar-collapse"></button>
-                <a class="navbar-brand g-logo" href="javascript:;"><img src="img/logo.png" alt=""/></a>
+                <a class="navbar-brand g-logo" href="javascript:;"><img src="../img/logo.png" alt=""/></a>
             </div>
             <span class="g-arrow"></span>
             <div class="collapse navbar-collapse" >
@@ -138,4 +139,4 @@
 </div>
 </body>
 </html>
-<script src="js/top.js"></script>
+<script src="../js/top.js"></script>
