--- a/登陆验证/修改密码.html
+++ b/登陆验证/修改密码.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>修改密码</title>
-		<link rel="stylesheet" type="text/css" href="css/login.min.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/login.min.css"/>
 	</head>
 	<body>
 		<div class="box">
@@ -46,7 +46,7 @@
 		</div>
 	</body>
 </html>
-<script src="js/jquery-3.1.0.js"></script>
+<script src="../js/jquery-3.1.0.js"></script>
 <script>
 	(function(){
 		$('.pass-edit').on('submit', function(){
