--- a/登陆验证/俱乐部注册.html
+++ b/登陆验证/俱乐部注册.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>俱乐部注册</title>
-		<link rel="stylesheet" type="text/css" href="css/login.min.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/login.min.css"/>
 	</head>
 	<body>
 		<div class="box">
@@ -103,7 +103,7 @@
 		</div>
 	</body>
 </html>
-<script src="js/jquery-3.1.0.js"></script>
+<script src="../js/jquery-3.1.0.js"></script>
 <script>
 	(function(){
 		$('.reg-club').on('submit', function(){
