--- a/赛事回顾.html
+++ b/赛事回顾.html
@@ -4,10 +4,12 @@
     <title>攀岩在线</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/top.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">
+    <link href="css/saishi2.css" rel="stylesheet">
     <link href="css/saishi.css" rel="stylesheet">
+
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -46,13 +48,13 @@
 </div>
 
 <!--主要内容区域-->
-<div class="indexMain-wrap back">
+<div class="content-bg back">
     <div class="container container-white">
         <div class="row">
-            <div class="col-sm-12 con-calendar">
-                <div class="con-reg-title clearfix">
-                    <i class="con-reg-tip fl"></i>
-                    <span class="con-reg-text fl">2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span>
+            <div class="col-sm-12">
+                <div class="ssbm-title">
+                    <div class="line"></div>
+                    <h3 class="head">2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</h3>
                 </div>
             </div>
         </div>
@@ -61,7 +63,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -72,7 +74,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -83,7 +85,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -94,7 +96,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -105,7 +107,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -116,7 +118,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -127,7 +129,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -138,7 +140,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -149,7 +151,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -160,7 +162,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -171,7 +173,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -182,7 +184,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -193,7 +195,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -204,7 +206,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -215,7 +217,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
@@ -226,7 +228,7 @@
                 <li class="col-xs-12 col-sm-6 col-md-3">
                     <a href="javascript:;">
                         <div class="back-pic">
-                            <video src="movie.ogg" width="100%" height="100%" controls preload></video>
+                            <video src="video/trail.mp4" width="100%" height="100%" controls preload></video>
                         </div>
                         <p class="back-title"><span>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</span></p>
                         <p class="back-date none">42:25</p>
