--- a/赛事报名-取消报名.html
+++ b/赛事报名-取消报名.html
@@ -4,10 +4,12 @@
     <title>攀岩在线</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/top.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">
+    <link href="css/saishi2.css" rel="stylesheet">
     <link href="css/saishi.css" rel="stylesheet">
+
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -46,15 +48,14 @@
 </div>
 
 <!--主要内容区域-->
-<div class="indexMain-wrap reg-c">
+<div class="content-bg reg-c">
     <div class="container container-white">
         <div class="row">
-            <div class="col-sm-12 con-calendar">
-                <div class="con-reg-title clearfix">
-                    <i class="con-reg-tip fl"></i>
-                    <span class="con-reg-text fl">赛事报名</span>
-                    <i class="con-reg-line fl">/</i>
-                    <span class="con-reg-sub fl">REGISTER</span>
+            <div class="col-sm-12">
+                <div class="ssbm-title">
+                    <div class="line"></div>
+                    <h3 class="head">赛事报名</h3>
+                    <P class="english"><span>/</span>REGLSTER</P>
                     <div class="con-select fl con-select-top">
                         <span class="con-select-text"><em>2016</em><i></i></span>
                         <div class="con-select-item none">
@@ -85,7 +86,7 @@
                 <div class="club-t-items">
                     <form action="" class="club-reg-c">
                         <div class="club-t-items-list clearfix">
-                            <span class="club-t-items-txt fl"><i>*</i>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名</span>
+                            <span class="club-t-items-txt fl"><i>*</i>姓&nbsp;&nbsp;名</span>
                             <div class="club-t-items-para fl">
                                 <input type="text" class="club-t-items-input club-reg-c-name" name=""/>
                             </div>
