--- a/赛事回顾.html
+++ b/赛事回顾.html
@@ -54,8 +54,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="ssbm-title">
-                    <div class="line"></div>
-                    <h3 class="head">2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</h3>
+                    <h3 class="head"><div class="line"></div>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</h3>
                 </div>
             </div>
         </div>
