--- a/运动员查询.html
+++ b/运动员查询.html
@@ -40,7 +40,7 @@
     <div class="container container-white">
         <div class="row yundong-wrap">
             <div class="col-md-6">
-                <div class="yundong-logo">
+                <div class="yundong-logo clearfix">
                     <i class="logo"></i>
                     <h3>中国登山协会注册运动员</h3>
                 </div>
@@ -49,8 +49,13 @@
                 <div class="yd-search-wrap">
                     <div class="yd-search-box">
                         <div class="yd-search">
-                            <input type="text" placeholder="请输入姓名或注册单位" class="search-text"/>
-                            <a href="javascript:;" class="search-btn">搜索</a>
+                            <div class="search-text">
+                                <input type="text" placeholder="请输入姓名或注册单位" />
+                            </div>
+                            <div class="search-btn">
+                                <a href="javascript:;">搜索</a>
+                            </div>
+
                         </div>
                     </div>
                     <a href="" class="help-item">
