--- a/关于我们.html
+++ b/关于我们.html
@@ -54,8 +54,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="ssbm-title">
-                    <div class="line"></div>
-                    <h3 class="head">关于我们</h3>
+                    <h3 class="head"><div class="line"></div>关于我们</h3>
                     <P class="english"><span>/</span>ABOUT US</P>
                 </div>
             </div>
