--- a/赛事报名.html
+++ b/赛事报名.html
@@ -41,8 +41,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="ssbm-title">
-                    <div class="line"></div>
-                    <h3 class="head">赛事报名</h3>
+                    <h3 class="head"><div class="line"></div>赛事报名</h3>
                     <P class="english"><span>/</span>REGLSTER</P>
                     <div class="con-select fl con-select-top">
                         <span class="con-select-text"><em>2016</em><i></i></span>
