--- a/直播.html
+++ b/直播.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>直播</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/global.css" rel="stylesheet">
     <link href="css/saishi.css" rel="stylesheet">
@@ -46,7 +48,7 @@
         <div class="video-wrap">
             <div class="video-box">
                 <div class="video-flex">
-                    <video src="video/trail.mp4" controls="controls" class="video"></video>
+                    <video src="video/trail.mp4" controls class="video"></video>
                 </div>
                 <div class="chat-wrap hidden-sm hidden-xs">
                     <div class="chat-box">
@@ -395,3 +397,4 @@
 
 </body>
 </html>
+<script src="js/top.js"></script>
