--- a/赛事报名-参赛须知.html
+++ b/赛事报名-参赛须知.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>赛事报名-参赛须知</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/global.css" rel="stylesheet">
     <link href="css/saishi.css" rel="stylesheet">
@@ -39,8 +41,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="ssbm-title">
-                    <div class="line"></div>
-                    <h3 class="head">赛事报名</h3>
+                    <h3 class="head"><div class="line"></div>赛事报名</h3>
                     <P class="english"><span>/</span>REGLSTER</P>
                     <div class="con-select fl con-select-top">
                         <span class="con-select-text"><em>2016</em><i></i></span>
@@ -106,3 +107,4 @@
 
 </body>
 </html>
+<script src="js/top.js"></script>
