--- a/运动员查询.html
+++ b/运动员查询.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>运动员查询</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/global.css" rel="stylesheet">
     <link href="css/saishi.css" rel="stylesheet">
@@ -38,7 +40,7 @@
     <div class="container container-white">
         <div class="row yundong-wrap">
             <div class="col-md-6">
-                <div class="yundong-logo">
+                <div class="yundong-logo clearfix">
                     <i class="logo"></i>
                     <h3>中国登山协会注册运动员</h3>
                 </div>
@@ -47,8 +49,13 @@
                 <div class="yd-search-wrap">
                     <div class="yd-search-box">
                         <div class="yd-search">
-                            <input type="text" placeholder="请输入姓名或注册单位" class="search-text"/>
-                            <a href="javascript:;" class="search-btn">搜索</a>
+                            <div class="search-text">
+                                <input type="text" placeholder="请输入姓名或注册单位" />
+                            </div>
+                            <div class="search-btn">
+                                <a href="javascript:;">搜索</a>
+                            </div>
+
                         </div>
                     </div>
                     <a href="" class="help-item">
@@ -183,3 +190,4 @@
 
 </body>
 </html>
+<script src="js/top.js"></script>
