--- a/关于我们.html
+++ b/关于我们.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>攀岩在线</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>攀岩在线</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/global.css" rel="stylesheet">
@@ -53,8 +54,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="ssbm-title">
-                    <div class="line"></div>
-                    <h3 class="head">关于我们</h3>
+                    <h3 class="head"><div class="line"></div>关于我们</h3>
                     <P class="english"><span>/</span>ABOUT US</P>
                 </div>
             </div>
@@ -85,3 +85,4 @@
 </div>
 </body>
 </html>
+<script src="js/top.js"></script>
