--- a/赛事回顾.html
+++ b/赛事回顾.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>攀岩在线</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>赛事回顾</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/global.css" rel="stylesheet">
@@ -53,8 +54,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="ssbm-title">
-                    <div class="line"></div>
-                    <h3 class="head">2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</h3>
+                    <h3 class="head"><div class="line"></div>2016 全国攀岩分站赛（第一站）- 广西.乐业（L,B,S）</h3>
                 </div>
             </div>
         </div>
